yaml/namespace/httpbin-virtualservice.yaml
# kubetpl:syntax:$

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: $NAME
  namespace: $NAMESPACE
spec:
  hosts:
  - "$NAME.example.com"
  gateways:
  - $NAME-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: $NAME
